[metadata]
name = mqtty
summary = Mqtty is a console-based interface to MQTTY
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
keywords = mqtty console urwid

[files]
packages =
    mqtty
data_files =
    share/mqtty/examples = examples/*

[entry_points]
console_scripts =
    mqtty = mqtty.app:main
